      (writeback|ordered) data mode" message
  * ignore.d.server/amavisd-new:
    - allow quarantine in "Passed SPAM" log line
    - allow subdirectories for quarantine messages and made Message-ID in
      "Passed BAD-HEADER" log lines optional, thanks to John Clements
    - allow compressed quarantine messages (closes: #639839)

  [ Gerfried Fuchs ]
  * Remove myself from uploaders.

  [ Jeremy L. Gaddis ]
  * ignore.d.server/postfix:
    - adjust postfix certificate fingerprint rule to match new output
      format, thanks to Loïc Minier (closes: #616616)
  * ignore.d.server/amavisd-new:
    - adjusted rule to match new output format, thanks to Adrian Lang
      (closes: #624197)
  * ignore.d.server/ssh:
    - add rule to ignore AllowGroups denial, thanks to Gerald Turner
      (closes: #637923)
  * ignore.d.server/dovecot:
    - adjusted rule to match IPv6 addresses, thanks to Gerald Turner
      (closes: #637916)
  * debian/copyright:
    - updated copyright year to 2011
    - added myself as team member

  [ Frédéric Brière ]
  * violations.d/kernel:
    - ignore whitespace before timestamp
  * ignore.d.workstation/kernel:
    - allow '.' in input device name

 -- Hannes von Haugwitz <hannes@vonhaugwitz.com>  Mon, 04 Jul 2011 17:42:26 +0200

logcheck (1.3.13) unstable; urgency=low

  * ignore.d.server/pure-ftpd:
    - fixed user name pattern in logout message, thanks to Simon Breuss
      (LP: #619119)
  * violations.ignore.d/logcheck-sudo:
    - match COMMAND=list and TTY=console, thanks to Michel Messerschmidt for
      the patch (closes: #593482)
  * ignore.d.server/amavisd-new:
    - applied changes by Christian Dröge (closes: #594605):
      - IPv6 support for IP addresses
      - allow PASSED SPAM in log
      - optional minus sign after "Hits:"
      - optional quarantine in log line
      - optional Message-ID

 -- Hannes von Haugwitz <hannes@vonhaugwitz.com>  Fri, 03 Sep 2010 09:59:52 +0200

logcheck (1.3.12) unstable; urgency=low
