@@ -8,7 +8,10 @@
 
 .PHONY: build clean binary-indep binary-arch binary cvs-build checkpo help
 
-build: build-stamp
+build: build-arch build-indep
+build-arch: build-stamp
+build-indep: build-stamp
+
 build-stamp:
 	dh_testdir
 
