@@ -72,6 +72,8 @@ logcheck (1.3.14) unstable; urgency=low
     - allow subdirectories for quarantine messages and made Message-ID in
       "Passed BAD-HEADER" log lines optional, thanks to John Clements
     - allow compressed quarantine messages (closes: #639839)
+  * debian/rules:
+    - added build-indep and build-arch targets
 
   [ Gerfried Fuchs ]
   * Remove myself from uploaders.
